# FlatHunter-AI

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.production.yml  docker-compose.yml  render.yaml  stage1-source.part-00  stage1-source.part-000  stage1-source.part-001  stage1-source.part-002  stage1-source.part-003  stage1-source.part-004  stage1-source.part-005  stage1-source.part-006  stage1-source.part-007  stage1-source.part-008  stage1-source.part-009  stage1-source.part-010  stage1-source.part-011  stage1-source.part-012  stage1-source.part-013
backend/: .dockerignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml
backend/apps/accounts/: admin.py  models.py  serializers.py  services.py  telegram.py  urls.py  views.py
backend/apps/ai_analysis/: admin.py  apps.py  models.py  providers.py  rules.py  schemas.py  serializers.py  services.py  urls.py  views.py
backend/apps/analysis/: admin.py  apps.py  comparables.py  context.py  contracts.py  market.py  risk.py  (+12 more)
backend/config/: celery.py  settings.py  urls.py
backend/tests/: test_ai_analysis.py  test_auth_api.py  test_health.py  test_listings.py  test_matching.py  test_searches.py  test_stage5_listing_workspace.py  test_stage6_geodata.py  test_stage7_duplicates.py  test_stage8_ai_reliability.py  test_stage9_ai_context.py  test_stage9_api.py  test_stage9_commands.py  test_stage9_demo.py  test_stage9_ingestion.py  test_stage9_market.py  test_stage9_models.py  test_stage9_risk.py  test_stage9_services.py  test_stage9_snapshots.py  test_telegram_init_data.py  test_webhook.py
(+252 files in other folders)
